# UniversitySubscription

./: Makefile  README.md  pyproject.toml
email_vs_sms_sender/: consumer_email.py  consumer_sms.py  producer.py
