[tool.poetry]
name = "universitysubscription"
version = "0.1.0"
description = ""
authors = ["paulmusquaro <136118097+paulmusquaro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.28.2"
faker = "^24.9.0"
pika = "^1.3.2"
redis = "^5.0.3"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
